update READNE.md and .gitignore